--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "saas-velzon-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://RaguRam1991.github.io/tt_sales",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
@@ -32,6 +33,7 @@
     "filepond-plugin-image-preview": "^4.6.10",
     "firebase": "^9.6.7",
     "formik": "^2.2.9",
+    "gh-pages": "^6.1.0",
     "google-maps-react": "^2.0.6",
     "gridjs": "^5.0.2",
     "gridjs-react": "^5.0.2",
@@ -96,6 +98,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build --max_old_space_size=8000 build",
     "test": "react-scripts test",
